# stable-mir-json

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  check_cov.py  flake.nix  lessons-learned.md  notes.md  panic_example.rs  panic_example.smir.json  pr.md  run.sh  rust-toolchain.toml  rustc_arch.sh  test.rs  tests_ui.failing
.github/scripts/: check-cachix-pin.sh  install-yq.sh
.github/workflows/: master.yml  test-all-nightlies.yml  test.yml  update-version.yml
cursor-data/: design.md  goals.md  instructions.md  requirements.md
cursor-data/20250718-docs/: analysis_summary.md  documentation_analysis_and_suggestions.md  session.md  session_transcript.md  summary.md
cursor-data/20250718-rustc-upgrade/: implementation_plan.md  session.md
cursor-data/20250721-upgrade-implementation/: session.md  summary.md
docs/: nightly-compat.md  schema.md
docs/adr/: 001-index-first-graph-architecture.md  002-declarative-pipeline-with-allocmap-coherence.md  003-compat-layer-for-rustc-internals.md  004-generative-json-schema.md  004-interned-index-receipts.md  pr-001-compat-layer-for-rustc-internals.md
docs/slides/: reify-fn-pointer.md  unevaluated-const.md
nix/stable-mir-json/: default.nix
nix/stable-mir-json-source/: default.nix
nix/test/: integration.nix
schema/: stable-mir.schema.json
scratch/smir-cfg/: README.md  package.yaml  (+1 more)
scripts/: nightly_admin.py  validate-schema.sh
src/: coercion.rs  driver.rs  lib.rs  linker.rs  main.rs  mk_graph.rs  mut_visit.rs  parse_bytes.rs  pretty.rs  printer.rs  reader.rs
tests/: test_basic.rs
(+1988 files in other folders)
