[package]
name = "stable-mir-pretty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-writer = "0.1.4"
tracing = "0.1"

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true